# PA2

./: CMakeLists.txt  Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
leaderboards/: KULTURA_leaderboard.txt  kebab_leaderboard.txt  pa2_leaderboard.txt  test_leaderboard.txt  ukazka_leaderboard.txt
quizes/: KULTURA.txt  kebab.txt  novy.txt  pa2.txt  pa3.txt  test.txt  ukazka.txt
src/: Application.cpp  Application.h  Common.cpp  Common.h  IOUnit.cpp  IOUnit.h  IOUnitLeaderBoard.cpp  IOUnitLeaderBoard.h  IOUnitQuiz.cpp  IOUnitQuiz.h  LeaderBoard.cpp  LeaderBoard.h  Page.cpp  Page.h  Player.cpp  Player.h  Question.cpp  Question.h  QuestionFreeAnswer.cpp  QuestionFreeAnswer.h  QuestionMultiChoice.cpp  QuestionMultiChoice.h  QuestionSingleChoice.cpp  QuestionSingleChoice.h  QuestionType.cpp  QuestionType.h  QuestionYesNo.cpp  QuestionYesNo.h  Quiz.cpp  Quiz.h  QuizMaker.cpp  QuizMaker.h  main.cpp
